--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.4.4",
     "element-ui": "^2.13.0",
     "fastclick": "^1.0.6",
+    "vant": "^2.8.1",
     "vue": "^2.6.10",
     "vue-lazyload": "^1.3.3",
     "vue-router": "^3.1.5",
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
+    "babel-plugin-import": "^1.13.0",
     "postcss-px-to-viewport": "^1.1.1",
     "vue-template-compiler": "^2.6.10"
   }
